--- a/Notebook/PseudoDataFactory.ipynb
+++ b/Notebook/PseudoDataFactory.ipynb
@@ -15,9 +15,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensorflow Version is 2.4.1\n",
+      "Keras Version is 2.4.0\n",
+      "1 Physical GPUs, 1 Logical GPU\n",
+      "Fri Aug  6 02:02:06 2021       \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| NVIDIA-SMI 455.23.04    Driver Version: 455.23.04    CUDA Version: 11.1     |\n",
+      "|-------------------------------+----------------------+----------------------+\n",
+      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
+      "|                               |                      |               MIG M. |\n",
+      "|===============================+======================+======================|\n",
+      "|   0  GeForce RTX 3090    Off  | 00000000:E1:00.0 Off |                  N/A |\n",
+      "| 42%   50C    P2   114W / 350W |   2078MiB / 24268MiB |     12%      Default |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "                                                                               \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| Processes:                                                                  |\n",
+      "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
+      "|        ID   ID                                                   Usage      |\n",
+      "|=============================================================================|\n",
+      "+-----------------------------------------------------------------------------+\n"
+     ]
+    }
+   ],
    "source": [
     "from __future__ import absolute_import, division, print_function, unicode_literals\n",
     "# basic python package\n",
@@ -119,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -144,8 +173,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.55 s, sys: 5.75 s, total: 8.3 s\n",
-      "Wall time: 8.83 s\n"
+      "CPU times: user 2.5 s, sys: 5.52 s, total: 8.03 s\n",
+      "Wall time: 8.57 s\n"
      ]
     }
    ],
