update road map

--- a/Notebook/Demo.ipynb
+++ b/Notebook/Demo.ipynb
@@ -2,23 +2,25 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "threatened-cannon",
+   "id": "civil-married",
    "metadata": {},
    "source": [
     "# CR ML Road Map\n",
     "\n",
     "\n",
     "- Step 1:\n",
-    "    - TBA\n",
+    "    - Transfrom Mock Data from Text File to Numpy Dataframe \n",
     "- Step 2:\n",
-    "    - TBA \n",
+    "    - ReCalculate Normalized Factor for Mock Data\n",
     "- Step 3:\n",
-    "    - TBA"
+    "    - Machine Learning\n",
+    "        - using whole data to train\n",
+    "        - retrain the model with the data in 6 $\\sigma$ CL region "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "covered-particle",
+   "id": "patent-challenge",
    "metadata": {},
    "source": [
     "## Import Packages"
@@ -27,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bound-preference",
+   "id": "thrown-lawrence",
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ready-glenn",
+   "id": "rational-stephen",
    "metadata": {},
    "source": [
     "## Transfrom Mock Data from Text File to Numpy Dataframe \n",
@@ -118,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "handed-runner",
+   "id": "liquid-behavior",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eastern-ceremony",
+   "id": "royal-muslim",
    "metadata": {},
    "source": [
     "## ReCalculate Normalized Factor for Mock Data\n",
@@ -179,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "textile-douglas",
+   "id": "formed-victor",
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "affected-stress",
+   "id": "opposed-speaking",
    "metadata": {},
    "source": [
     "- 2: Using  \n",
@@ -223,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "bearing-edwards",
+   "id": "demographic-delta",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bulgarian-traffic",
+   "id": "mediterranean-friday",
    "metadata": {},
    "source": [
     "- 3: Using   \n",
@@ -268,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "heated-administrator",
+   "id": "detected-bathroom",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "concrete-thomas",
+   "id": "informal-boundary",
    "metadata": {},
    "source": [
     "- 4: Using   \n",
@@ -313,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "pleased-forum",
+   "id": "played-logan",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dramatic-detail",
+   "id": "successful-schema",
    "metadata": {},
    "source": [
     "- 5: Put `origin_parameter` and `new_parameter` back into  \n",
@@ -351,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "owned-blond",
+   "id": "skilled-gathering",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "front-article",
+   "id": "broadband-portugal",
    "metadata": {},
    "source": [
     "- 6: Using  \n",
@@ -412,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "nearby-turkey",
+   "id": "european-congress",
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "delayed-europe",
+   "id": "commercial-scope",
    "metadata": {},
    "source": [
     "# Machine Learning\n",
@@ -472,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "heard-pattern",
+   "id": "collectible-malaysia",
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "floppy-claim",
+   "id": "functioning-possibility",
    "metadata": {},
    "source": [
     "- 2:Using   \n",
@@ -531,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "informal-meeting",
+   "id": "binding-union",
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "domestic-pencil",
+   "id": "advisory-technician",
    "metadata": {},
    "source": [
     "- 3:Using   \n",
@@ -675,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "distributed-convention",
+   "id": "chicken-contact",
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +811,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "frequent-independence",
+   "id": "civic-bathroom",
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "western-voltage",
+   "id": "sharp-halloween",
    "metadata": {},
    "outputs": [],
    "source": []
