update road map

--- a/Notebook/Demo.ipynb
+++ b/Notebook/Demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "civil-married",
+   "id": "afraid-bolivia",
    "metadata": {},
    "source": [
     "# CR ML Road Map\n",
@@ -15,12 +15,24 @@
     "- Step 3:\n",
     "    - Machine Learning\n",
     "        - using whole data to train\n",
-    "        - retrain the model with the data in 6 $\\sigma$ CL region "
+    "        - retrain the model with the data in 6 $\\sigma$ CL region \n",
+    "- Step 4:\n",
+    "   - Create pseudo data from pseudo experiment based on the uncertainty from experimental data\n",
+    "- Step 5:\n",
+    "   - Using retrained model to predict the parameter for pseudo data\n",
+    "- Step 6:\n",
+    "    - Send predicted parameters back to GALPROP for MC simulation\n",
+    "- Step 7:\n",
+    "    - TBA\n",
+    "- Step 8:\n",
+    "    - TBA\n",
+    "- Step 9:\n",
+    "    - TBA"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "patent-challenge",
+   "id": "photographic-moisture",
    "metadata": {},
    "source": [
     "## Import Packages"
@@ -29,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "thrown-lawrence",
+   "id": "alike-executive",
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rational-stephen",
+   "id": "contemporary-clone",
    "metadata": {},
    "source": [
     "## Transfrom Mock Data from Text File to Numpy Dataframe \n",
@@ -120,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "liquid-behavior",
+   "id": "decreased-highland",
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "royal-muslim",
+   "id": "natural-helen",
    "metadata": {},
    "source": [
     "## ReCalculate Normalized Factor for Mock Data\n",
@@ -181,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "formed-victor",
+   "id": "communist-coordination",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "opposed-speaking",
+   "id": "blessed-fraud",
    "metadata": {},
    "source": [
     "- 2: Using  \n",
@@ -225,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "demographic-delta",
+   "id": "civil-antique",
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mediterranean-friday",
+   "id": "adequate-liechtenstein",
    "metadata": {},
    "source": [
     "- 3: Using   \n",
@@ -270,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "detected-bathroom",
+   "id": "artistic-atlas",
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "informal-boundary",
+   "id": "naughty-spain",
    "metadata": {},
    "source": [
     "- 4: Using   \n",
@@ -315,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "played-logan",
+   "id": "loved-replacement",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "successful-schema",
+   "id": "usual-wedding",
    "metadata": {},
    "source": [
     "- 5: Put `origin_parameter` and `new_parameter` back into  \n",
@@ -353,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "skilled-gathering",
+   "id": "surprised-incident",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "broadband-portugal",
+   "id": "developed-language",
    "metadata": {},
    "source": [
     "- 6: Using  \n",
@@ -414,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "european-congress",
+   "id": "increased-tuning",
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "commercial-scope",
+   "id": "working-baptist",
    "metadata": {},
    "source": [
     "# Machine Learning\n",
@@ -474,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "collectible-malaysia",
+   "id": "departmental-british",
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "functioning-possibility",
+   "id": "large-handle",
    "metadata": {},
    "source": [
     "- 2:Using   \n",
@@ -533,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "binding-union",
+   "id": "proprietary-picking",
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +678,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "advisory-technician",
+   "id": "breathing-obligation",
    "metadata": {},
    "source": [
     "- 3:Using   \n",
@@ -677,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "chicken-contact",
+   "id": "above-bruce",
    "metadata": {},
    "outputs": [
     {
@@ -810,8 +822,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "familiar-thousand",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Transfrom Mock Data from Text File to Numpy Dataframe "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 148,
-   "id": "civic-bathroom",
+   "id": "coupled-antarctica",
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +882,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sharp-halloween",
+   "id": "assigned-consultancy",
    "metadata": {},
    "outputs": [],
    "source": []
